--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.main.banner-mode=off
 
 # Reduce logging level
 logging.level.root=warn
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+# confugure JPA/Hiberate to auto create the tables
+# the "updtae" config will keep existing data in the table
+spring.jpa.hibernate.ddl-auto=update
