Check box added

--- a/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/application.properties
+++ b/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=thymeleafdemo
-countries:Brazil,Frnace,Germany,India,Pakistan
+countries=Brazil,Frnace,Germany,India,Pakistan
+languages=Go,Java,Python,Rust
+systems=Linux,macOS,Microsoft Windows, ios, Android
